--- a/styles/grids.css
+++ b/styles/grids.css
@@ -29,11 +29,13 @@
     border: none;
     margin-bottom: 10px;
     font-weight: bold;
+    margin-top: 5px;
 }
 
 .roomGrid button:hover {
     background-color: rgb(0, 0, 0);
     color: rgb(244, 103, 21);
+    
 }
 
 .roomGrid h3, .roomGrid p {
@@ -49,4 +51,17 @@
     font-weight: bold;
     color: rgb(244, 103, 21);
     font-size: 18px;
+    margin-bottom: -25px;
 }
+
+.roomGrid .roomPrice span {
+    font-weight: bold;
+    color: rgb(244, 103, 21);
+    font-size: 18px;
+    margin-bottom: -55px;
+}
+
+.search {
+    display: flex;
+}
+
